plugins {
    id "java"
    id "com.gradleup.shadow" version "9.2.1" apply false
    id "xyz.jpenilla.run-paper" version "3.0.2" apply false
    id "io.papermc.paperweight.userdev" version "2.0.0-beta.19" apply false
}

allprojects {
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'

    group = 'dev.lumenlang'
    version = '1.2.0-BETA-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

subprojects {
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.release.set(17)
    }

    dependencies {
        api "org.jetbrains:annotations:26.0.2-1"
    }
}

tasks.register("publishAll") {
    dependsOn ':pipeline:publish', ':api:publish', ':plugin:publish'
}